fix: files not showing at deploy

--- a/src/assets/styles/_not-found.scss
+++ b/src/assets/styles/_not-found.scss
@@ -4,8 +4,6 @@
 
 .not-found {
   text-align: center;
-  &__title {
-  }
   &__svg {
     width: 100%;
     max-width: rem(600);
